; ModuleID = '/home/carl/AnghaBench/kphp-kdb/db-proxy/extr_db-proxy.c_sqlp_password.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/db-proxy/extr_db-proxy.c_sqlp_password.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }
%struct.TYPE_2__ = type { i32 }

@sql_username = common dso_local global i32 0, align 4
@sql_password = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlp_password(%struct.connection* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.connection*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca [20 x i8], align 16
  store %struct.connection* %0, %struct.connection** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = call i32 @memset(i8* %9, i32 0, i32 20)
  %11 = load i8*, i8** %6, align 8
  %12 = load i32, i32* @sql_username, align 4
  %13 = call i32 @strcmp(i8* %11, i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %29, label %15

15:                                               ; preds = %3
  %16 = load i64, i64* @sql_password, align 8
  %17 = inttoptr i64 %16 to i8*
  %18 = load i64, i64* @sql_password, align 8
  %19 = call i32 @strlen(i64 %18)
  %20 = getelementptr inbounds [20 x i8], [20 x i8]* %8, i64 0, i64 0
  %21 = call i32 @SHA1(i8* %17, i32 %19, i8* %20)
  %22 = getelementptr inbounds [20 x i8], [20 x i8]* %8, i64 0, i64 0
  %23 = load i8*, i8** %7, align 8
  %24 = call i32 @SHA1(i8* %22, i32 20, i8* %23)
  %25 = call i32 (...) @mrand48()
  %26 = load %struct.connection*, %struct.connection** %5, align 8
  %27 = call %struct.TYPE_2__* @SQLS_DATA(%struct.connection* %26)
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  store i32 %25, i32* %28, align 4
  store i32 1, i32* %4, align 4
  br label %30

29:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %29, %15
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @strcmp(i8*, i32) #1

declare dso_local i32 @SHA1(i8*, i32, i8*) #1

declare dso_local i32 @strlen(i64) #1

declare dso_local i32 @mrand48(...) #1

declare dso_local %struct.TYPE_2__* @SQLS_DATA(%struct.connection*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
